Update HTTP/HTTPS server examples and Swagger bundle
